--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"version": "1.0.0",
 	"description": "The Good Practice Project",
-	"keywords": ["freecodecamp","Practice","Tanvi","Wholesome"],
+	"keywords": [ "descriptive", "related", "freecodecamp" ],
 	"devDependencies": {},
 	"author": "Tanvi Bhadiyadra",
 	"license": "ISC",
